--- a/app/src/main/res/layout/student_bookchair_activity.xml
+++ b/app/src/main/res/layout/student_bookchair_activity.xml
@@ -112,11 +112,12 @@
         app:layout_constraintVertical_bias="0.299" />
 
     <Button
-        android:id="@+id/btnSelect"
+        android:id="@+id/btnSelectTable"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#145DA0"
-        android:text="select"
+        android:onClick="SelectTableButton"
+        android:text="Select Table"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
