--- a/app/src/main/res/layout/student_bookchair_activity.xml
+++ b/app/src/main/res/layout/student_bookchair_activity.xml
@@ -140,7 +140,7 @@
         app:layout_constraintVertical_bias="0.588" />
 
     <ListView
-        android:id="@+id/listview"
+        android:id="@+id/RequestsListView"
         android:layout_width="378dp"
         android:layout_height="224dp"
         app:layout_constraintBottom_toBottomOf="parent"
