Mayan branch merege - updated files

--- a/app/src/main/res/layout/student_bookclass_activity.xml
+++ b/app/src/main/res/layout/student_bookclass_activity.xml
@@ -116,13 +116,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#145DA0"
-        android:onClick="SelectTableButton"
-        android:text="Select Table"
+        android:onClick="SelectClassButton"
+        android:text="Select Class"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.434" />
+        app:layout_constraintVertical_bias="0.434"
+        tools:ignore="OnClick" />
 
     <Button
         android:id="@+id/btnReservations"
@@ -130,7 +131,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#145DA0"
         android:onClick="MyReservations"
-        android:text="My Reservations"
+        android:text="My Class Reservations"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
