--- a/app/src/main/res/layout/student_main_activity.xml
+++ b/app/src/main/res/layout/student_main_activity.xml
@@ -46,8 +46,8 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.607"/>
-        <!--android:onClick="BookClassroomButton"-->
+        app:layout_constraintVertical_bias="0.607"
+        android:onClick="BookClassButton"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
