--- a/app/src/main/res/layout/student_bookchair_activity.xml
+++ b/app/src/main/res/layout/student_bookchair_activity.xml
@@ -130,7 +130,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#145DA0"
         android:onClick="MyReservations"
-        android:text="My Reservations"
+        android:text="My Table Reservations"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -140,7 +140,7 @@
         app:layout_constraintVertical_bias="0.588" />
 
     <ListView
-        android:id="@+id/RequestsListView"
+        android:id="@+id/listview"
         android:layout_width="378dp"
         android:layout_height="224dp"
         app:layout_constraintBottom_toBottomOf="parent"
