Updated files and classes - Yuval

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="light_green">#E2F0D9</color>
     <color name="brown">#C2916E</color>
     <color name="light_blue">#8FAADC</color>
+    <color name="light_gray">#D0CECE</color>
 </resources>
