--- a/app/src/main/res/layout/floor_b_layout_classroom.xml
+++ b/app/src/main/res/layout/floor_b_layout_classroom.xml
@@ -3,9 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".FloorActivityClassroom">
-
+    android:layout_height="match_parent">
 
     <HorizontalScrollView
         android:layout_width="wrap_content"
@@ -20,11 +18,11 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/floorABackground"
+                android:id="@+id/floorBBackground"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:adjustViewBounds="true"
-                android:src="@drawable/floor_a_background_classroom"
+                android:src="@drawable/floor_b_background_classroom"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -46,6 +44,37 @@
                 app:layout_constraintVertical_bias="1.0" />
 
             <TextView
+                android:id="@+id/textView12"
+                android:layout_width="309dp"
+                android:layout_height="285dp"
+                android:background="@color/white"
+                android:gravity="center"
+                android:textSize="20dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/floorB_classroom1"
+                android:layout_width="293dp"
+                android:layout_height="140dp"
+                android:backgroundTint="@color/light_blue"
+                android:onClick="classroomClick"
+                app:layout_constraintBottom_toBottomOf="@+id/textView12"
+                app:layout_constraintEnd_toEndOf="@+id/textView12"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/floorB_classroom2" />
+
+            <Button
+                android:id="@+id/floorB_classroom2"
+                android:layout_width="293dp"
+                android:layout_height="140dp"
+                android:backgroundTint="@color/light_blue"
+                android:onClick="classroomClick"
+                app:layout_constraintEnd_toEndOf="@+id/textView12"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
                 android:id="@+id/textView3"
                 android:layout_width="171dp"
                 android:layout_height="59dp"
@@ -55,47 +84,10 @@
                 android:textColor="@color/white"
                 android:textSize="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="1.0" />
+                app:layout_constraintEnd_toEndOf="parent" />
 
-            <TextView
-                android:id="@+id/textView12"
-                android:layout_width="733dp"
-                android:layout_height="189dp"
-                android:background="@color/white"
-                android:gravity="center"
-                android:text="Classrooms"
-                android:textSize="20dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <Button
-                android:id="@+id/floorA_classroom1"
-                android:layout_width="346dp"
-                android:layout_height="172dp"
-                android:layout_marginEnd="12dp"
-                android:backgroundTint="@color/light_blue"
-                app:layout_constraintBottom_toBottomOf="@+id/textView12"
-                app:layout_constraintEnd_toStartOf="@+id/floorA_classroom2"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.47"
-                android:onClick="classroomClick"/>
-
-            <Button
-                android:id="@+id/floorA_classroom2"
-                android:layout_width="346dp"
-                android:layout_height="172dp"
-                android:layout_marginEnd="16dp"
-                android:backgroundTint="@color/light_blue"
-                app:layout_constraintBottom_toBottomOf="@+id/textView12"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.47"
-                android:onClick="classroomClick"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </HorizontalScrollView>
-
     <Button
         android:id="@+id/bookAllBtn"
         android:layout_width="wrap_content"
@@ -109,8 +101,5 @@
         tools:layout_editor_absoluteX="119dp"
         tools:layout_editor_absoluteY="604dp"
         android:onClick="bookAllClick"/>
-    />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-
