--- a/app/src/main/res/layout/floor_d_layout_classroom.xml
+++ b/app/src/main/res/layout/floor_d_layout_classroom.xml
@@ -3,9 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".FloorActivityClassroom">
-
+    android:layout_height="match_parent">
 
     <HorizontalScrollView
         android:layout_width="wrap_content"
@@ -20,16 +18,15 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/floorABackground"
+                android:id="@+id/floorDBackground"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
                 android:adjustViewBounds="true"
-                android:src="@drawable/floor_a_background_classroom"
+                android:src="@drawable/floor_d_background_classroom"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0" />
-
 
             <TextView
                 android:id="@+id/textView2"
@@ -45,6 +42,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="1.0" />
 
+
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="171dp"
@@ -55,47 +53,70 @@
                 android:textColor="@color/white"
                 android:textSize="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="1.0" />
+                app:layout_constraintEnd_toEndOf="parent" />
 
             <TextView
                 android:id="@+id/textView12"
-                android:layout_width="733dp"
-                android:layout_height="189dp"
+                android:layout_width="1000dp"
+                android:layout_height="197dp"
                 android:background="@color/white"
                 android:gravity="center"
-                android:text="Classrooms"
                 android:textSize="20dp"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/textView3"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/floorDBackground"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
-                android:id="@+id/floorA_classroom1"
-                android:layout_width="346dp"
-                android:layout_height="172dp"
-                android:layout_marginEnd="12dp"
+                android:id="@+id/floorD_classroom1"
+                android:layout_width="240dp"
+                android:layout_height="197dp"
+                android:layout_marginStart="7dp"
                 android:backgroundTint="@color/light_blue"
+                android:onClick="classroomClick"
                 app:layout_constraintBottom_toBottomOf="@+id/textView12"
-                app:layout_constraintEnd_toStartOf="@+id/floorA_classroom2"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.47"
-                android:onClick="classroomClick"/>
+                app:layout_constraintVertical_bias="0.0" />
 
             <Button
-                android:id="@+id/floorA_classroom2"
-                android:layout_width="346dp"
-                android:layout_height="172dp"
-                android:layout_marginEnd="16dp"
+                android:id="@+id/floorD_classroom2"
+                android:layout_width="240dp"
+                android:layout_height="197dp"
+                android:layout_marginStart="8dp"
                 android:backgroundTint="@color/light_blue"
+                android:onClick="classroomClick"
                 app:layout_constraintBottom_toBottomOf="@+id/textView12"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/floorD_classroom1"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.47"
-                android:onClick="classroomClick"/>
+                app:layout_constraintVertical_bias="0.0" />
+
+            <Button
+                android:id="@+id/floorD_classroom4"
+                android:layout_width="240dp"
+                android:layout_height="197dp"
+                android:layout_marginEnd="8dp"
+                android:backgroundTint="@color/light_blue"
+                android:onClick="classroomClick"
+                app:layout_constraintBottom_toBottomOf="@+id/textView12"
+                app:layout_constraintEnd_toEndOf="@+id/textView12"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <Button
+                android:id="@+id/floorD_classroom3"
+                android:layout_width="240dp"
+                android:layout_height="197dp"
+                android:layout_marginEnd="8dp"
+                android:backgroundTint="@color/light_blue"
+                android:onClick="classroomClick"
+                app:layout_constraintBottom_toBottomOf="@+id/textView12"
+                app:layout_constraintEnd_toStartOf="@+id/floorD_classroom4"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </HorizontalScrollView>
-
     <Button
         android:id="@+id/bookAllBtn"
         android:layout_width="wrap_content"
@@ -109,8 +130,6 @@
         tools:layout_editor_absoluteX="119dp"
         tools:layout_editor_absoluteY="604dp"
         android:onClick="bookAllClick"/>
-    />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-
