--- a/app/src/main/res/layout/librarian_bookclass_activity.xml
+++ b/app/src/main/res/layout/librarian_bookclass_activity.xml
@@ -112,7 +112,7 @@
         app:layout_constraintVertical_bias="0.299" />
 
     <Button
-        android:id="@+id/btnSelectTable"
+        android:id="@+id/btnSelectClass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#145DA0"
