--- a/app/src/main/res/layout/student_main_activity.xml
+++ b/app/src/main/res/layout/student_main_activity.xml
@@ -22,7 +22,7 @@
         app:layout_constraintVertical_bias="0.462" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/book_chair_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#145DA0"
@@ -36,7 +36,7 @@
         app:layout_constraintVertical_bias="0.537" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/book_class_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Book a classroom"
@@ -48,6 +48,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.607"
         android:onClick="BookClassButton"/>
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
