arranged requests layout

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="brown">#C2916E</color>
     <color name="light_blue">#8FAADC</color>
     <color name="light_gray">#D0CECE</color>
+    <color name="light_red">#eb4034</color>
 </resources>
