--- a/app/src/main/res/layout/requests_layout.xml
+++ b/app/src/main/res/layout/requests_layout.xml
@@ -1,70 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="8dp"
+    android:gravity="start">
 
-    <Button
-        android:id="@+id/CallToStudent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_toLeftOf="@id/RejectBtn"
-        android:backgroundTint="#145DA0"
-        android:text="Call To Student"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.933"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.483" />
 
     <TextView
         android:id="@+id/list_item_string2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:paddingLeft="8dp"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.039"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.418" />
+        android:layout_alignParentLeft="true"
+        android:textSize="16dp"
+        />
 
-    <Button
-        android:id="@+id/ApproveBtn"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_toLeftOf="@id/RejectBtn"
-        android:backgroundTint="#145DA0"
-        android:text="Approve"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.908"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.161" />
-
+        android:orientation="horizontal"
+        android:gravity="end">
     <Button
         android:id="@+id/RejectBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_toLeftOf="@id/ApproveBtn"
+        android:layout_marginRight="5dp"
+        android:textSize="12dp"
+        android:backgroundTint="@color/light_red"
+        android:textAllCaps="false"
+        android:text="Reject" />
+
+    <Button
+        android:id="@+id/ApproveBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="5dp"
+        android:layout_toLeftOf="@id/RejectBtn"
+        android:backgroundTint="#56c756"
+        android:textColor="@color/black"
+        android:textSize="12dp"
+        android:textAllCaps="false"
+        android:text="Approve" />
+
+    <Button
+        android:id="@+id/CallToStudent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:backgroundTint="#145DA0"
-        android:text="Reject"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.912"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.326" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:textSize="12dp"
+        android:textAllCaps="false"
+        android:text="Call Student" />
+    </LinearLayout>
+
+</LinearLayout>
