--- a/app/src/main/res/layout/activity_change_credentials.xml
+++ b/app/src/main/res/layout/activity_change_credentials.xml
@@ -21,8 +21,8 @@
 
     <TextView
         android:id="@+id/textView19"
-        android:layout_width="108dp"
-        android:layout_height="42dp"
+        android:layout_width="110dp"
+        android:layout_height="62dp"
         android:text="Verify the password"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textSize="20dp"
@@ -124,4 +124,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.125" />
+
+    <Button
+        android:id="@+id/buttoncancel"
+        android:layout_width="215dp"
+        android:layout_height="44dp"
+        android:text="Cancel"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.403"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.71" />
 </androidx.constraintlayout.widget.ConstraintLayout>
