--- a/app/src/main/res/layout/activity_check_reservations.xml
+++ b/app/src/main/res/layout/activity_check_reservations.xml
@@ -27,9 +27,9 @@
     <ListView
         android:id="@+id/RequestsListView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="526dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/textView20" />
 </LinearLayout>
